<resources>
    <string name="app_name">VetPet</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="petCare">PetCare</string>
    <string name="enter_your_email_address_to_create_your_account">Enter your email address to create your account</string>
    <string name="no_pets">No pets</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="race">Race</string>
    <string name="color">Color</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="genre">Genre</string>
    <string name="Health">Health</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="input_data">Input data</string>
    <string name="no_completed_fields">No completed fields</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="me">Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="save_credentials">Save credentials</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="profile_photo">Profile photo</string>
    <string name="menu_me">Me</string>
    <string name="my_pets">My Pets</string>
    <string name="menu_history_medical">Medical History</string>
    <string name="menu_pets">My pets</string>
    <string name="menu_appointments">Appointments</string>
    <string name="edit_profile">Edit profile</string>
    <string name="pet_image">Pet Image</string>
    <string name="add_pet">Add pet</string>
    <string name="birthdate">Birthdate</string>
    <string name="specie">Specie</string>
    <string name="enter_your_password_to_finish_the_password_must_have_at_least_8_characters_one_uppercase_one_lowercase_and_one_number">Enter your password to finish. The password must have at least 8 characters, one uppercase, one lowercase and one number.</string>
    <string name="request_an_appointment">Request an appointment</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="past_appointments">Past Appointments</string>
</resources>