<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.insitutosanjuandelacruz.vetpet.view.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pets"
        android:name="com.insitutosanjuandelacruz.vetpet.view.ui.pets.PetsFragment"
        android:label="@string/menu_pets"
        tools:layout="@layout/fragment_pets" />

    <fragment
        android:id="@+id/nav_appointments"
        android:name="com.insitutosanjuandelacruz.vetpet.view.ui.appointments.AppointmentsFragment"
        android:label="@string/menu_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/nav_history_medical"
        android:name="com.insitutosanjuandelacruz.vetpet.view.ui.medicalHistory.MedicalHistoryFragment"
        android:label="@string/menu_history_medical"
        tools:layout="@layout/fragment_history_medical" />

    <fragment
        android:id="@+id/nav_me"
        android:name="com.insitutosanjuandelacruz.vetpet.view.ui.me.MeFragment"
        android:label="@string/menu_me"
        tools:layout="@layout/fragment_me" />
</navigation>